--- a/label_studio/templates/tasks.html
+++ b/label_studio/templates/tasks.html
@@ -206,6 +206,7 @@
                :class="{'fa-sort-up': this.order=='completed_at', 'fa-sort-down': this.order=='-completed_at'}"></i>
           </th>
           <th>Label</th>
+          <th>Double Checked</th>
           <th v-if="project.can_delete_tasks || project.can_manage_completions">Delete</th>
         </tr>
 
@@ -232,6 +233,8 @@
               <i class="fas fa-eye eye show-completion"></i>
             </a>
           </td>
+          <!-- Double Checked -->
+          <td>{{ task.completions[0].c_doubleChecked }}</td>
           <!-- Delete -->
           <td class="text-center" v-if="project.can_delete_tasks || project.can_manage_completions">
             <div class="actions-card">
