--- a/label_studio/templates/tasks.html
+++ b/label_studio/templates/tasks.html
@@ -93,6 +93,17 @@
         color: rgb(255, 13, 23);
     }
 
+    .comment-sector {
+        max-height: 100px !important;
+        max-width: 200px !important;
+        overflow-x: auto !important;
+        overflow-y: auto !important;
+    }
+
+    .comment-padding {
+        padding: 5px;
+    }
+
     @media screen and (max-width: 768px) {
       .full-preview-image {
         max-height: 250px;
@@ -246,6 +257,7 @@
                :class="{'fa-sort-up': this.order=='has_skipped_completions', 'fa-sort-down': this.order=='-has_skipped_completions'}"></i>
           </th>
           <th>Label</th>
+          <th>Comment</th>
           <th>Double Checked</th>
           <th v-if="project.can_delete_tasks || project.can_manage_completions">Delete</th>
 
@@ -284,8 +296,16 @@
               <i class="fas fa-eye eye show-completion"></i>
             </a>
           </td>
+          <!-- Comment -->
+          <td class="comment-padding">
+            <div class="comment-sector">{{ task.completions ? task.completions[0].c_comment : "" }}</div>
+          </td>
           <!-- Double Checked -->
-          <td>{{ task.completions ? task.completions[0].c_doubleChecked : false }}</td>
+          <td>
+            {{ !task.completions ? '' :
+              task.completions[0].c_doubleChecked ? true :
+                (task.completions[0].c_comment != null && task.completions[0].c_comment !== '') ? false : '' }}
+          </td>
           <!-- Delete -->
           <td class="text-center" v-if="project.can_delete_tasks || project.can_manage_completions">
             <div class="actions-card">
